--- a/src/main/resources/ftp.properties
+++ b/src/main/resources/ftp.properties
@@ -1,8 +1,8 @@
-spring.message.encoding = UTF-8
-ftp.host=123.56.2.28
-ftp.port=36
-ftp.username=gongyipin
-ftp.password=gongyipin123!!
-ftp.basePath=/
-ftp.filePath=
-ftp.fileName=工艺信息导入模板.xlsx
+#spring.message.encoding = UTF-8
+#ftp.host=123.56.2.28
+#ftp.port=36
+#ftp.username=gongyipin
+#ftp.password=gongyipin123!!
+#ftp.basePath=/
+#ftp.filePath=
+#ftp.fileName=工艺信息导入模板.xlsx
