--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,7 +18,7 @@ spring:
         defaultPropertyInclusion: ALWAYS
         ##sqlserver
     datasource:
-        url: jdbc:sqlserver://localhost:1433;DatabaseName=HGSMS
+        url: jdbc:sqlserver://localhost:1433;DatabaseName=TechSupport
         driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
         username: sa
         password: 123456
