--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <artifactId>reported-rarrier</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
+  <!--<packaging>jar</packaging>-->
 
   <parent>
     <groupId>org.springframework.boot</groupId>
